adding trails list, fix api path error

--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -3,16 +3,29 @@
     text-align: center;
   }
   
-  .Home .lander h1 {
+.Home .lander h1 {
     padding: 40px 0px;
     font-weight: 600;
     font-family: "Nova Square";
     font-size: 96px;
     color: #1e4072;
-  }
+}
   
-  .Home .lander p {
+.Home .lander p {
     color: #FFF;
     font-family: "Montserrat";
     font-size: 18px;
-  }
+}
+
+.Home .notes h4 {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 600;
+    overflow: hidden;
+    line-height: 1.5;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.Home .notes p {
+    color: #FFF;
+}
