adding update and delete UI

--- a/client/src/containers/Home.css
+++ b/client/src/containers/Home.css
@@ -10,22 +10,35 @@
     font-size: 96px;
     color: #1e4072;
 }
-  
+ 
 .Home .lander p {
     color: #FFF;
     font-family: "Montserrat";
-    font-size: 18px;
+    font-size: 14px;
 }
 
-.Home .notes h4 {
+.Home .trails h4 {
     font-family: "Montserrat", sans-serif;
     font-weight: 600;
+    font-size: 14px;
     overflow: hidden;
-    line-height: 1.5;
+    line-height: 1;
     white-space: nowrap;
     text-overflow: ellipsis;
 }
 
-.Home .notes p {
-    color: #FFF;
+.Home .trails h3 {
+    font-family: "Nova Square", sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    overflow: hidden;
+    line-height: 1;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    padding: 0px 0px 10px 10px;
+}
+
+.Home .trails p {
+    color: #AAA;
+    font-size: 12px;
 }
